--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.18",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "iconv-lite": "^0.6.3"
     }
 }
